[package]
name = "audserver"
version = "0.1.0"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { git="https://github.com/RustAudio/cpal.git", features = ["asio"] }
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.4"
zmq = "0.9"

# https://msgpack.org/index.html
rmp = "0.8"



